@@ -1,43 +1,0 @@
-{% extends "admin/base_site.html" %}
-{% load i18n adminmedia %}
-
-{% block extrastyle %}
-<link rel="stylesheet" type="text/css" href="{% admin_media_prefix %}css/forms.css" />
-{% endblock %}
-
-{% block extrahead %}{{ block.super }}
-<script type="text/javascript" src="{{MEDIA_URL}}js/jquery.js"></script>
-{% endblock %}
-
-{% block breadcrumbs %}{% if not is_popup %}
-<div class="breadcrumbs">
-     <a href="../../../">{% trans "Home" %}</a> &rsaquo;
-     <a href="../../">Invoice</a> &rsaquo;
-     <a href="../">Invoice</a> &rsaquo;
-     Goto
-</div>
-{% endif %}{% endblock %}
-
-{% block content_title %}<h1>Gå til invoice</h1>{% endblock %}
-
-{% block content %}
-
-<form method="POST" action="">
-
- {% if form.errors %}
-<p class="errornote">
-{% blocktrans count form.errors|length as counter %}Please correct the error below.{% plural %}Please correct the errors below.{% endblocktrans %}
-</p>
-<ul class="errorlist">{% for error in form.non_field_errors %}<li>{{ error }}</li>{% endfor %}</ul>
-{% endif %}
-
-{% for fieldset in adminform %}
-      {% include "admin/includes/fieldset.html" %}
-{% endfor %}
-
-    <div class="submit-row" >
-    <input type="submit" value="Vis invoices" class="default" name="do_show" />
-    </div>
-</form>
-
-{% endblock %}
