@@ -1,0 +1,33 @@
+{% extends "admin/base_site.html" %}
+{% load i18n adminmedia %}
+
+{% block extrastyle %}
+<link rel="stylesheet" type="text/css" href="{% admin_media_prefix %}css/forms.css" />
+{% endblock %}
+
+{% block extrahead %}{{ block.super }}
+<script type="text/javascript" src="{{MEDIA_URL}}js/jquery.js"></script>
+{% endblock %}
+
+{% block breadcrumbs %}{% if not is_popup %}
+<div class="breadcrumbs">
+     <a href="../../../">{% trans "Home" %}</a> &rsaquo;
+     <a href="../../">Invoice</a> &rsaquo;
+     <a href="../">Invoice</a> &rsaquo;
+     Payment (Select Workflow)
+</div>
+{% endif %}{% endblock %}
+
+{% block content_title %}<h1>Vælg workflow for betaling</h1>{% endblock %}
+
+{% block content %}
+
+<a href="{% url admin:invoice_invoicepaymentworkflow_changelist %}">Administrer</a>
+
+<ul>
+{% for workflow in workflows %}
+<li><a href="{% url admin:invoice_invoice_pay_step2 workflow_id=workflow.id %}">{{workflow}}</a>
+{% endfor %}
+</ul>
+
+{% endblock %}
