@@ -1,0 +1,60 @@
+{% extends "admin/base_site.html" %}
+{% load i18n adminmedia %}
+
+{% block extrastyle %}
+<link rel="stylesheet" type="text/css" href="{% admin_media_prefix %}css/forms.css" />
+{% endblock %}
+
+{% block extrahead %}{{ block.super }}
+<script type="text/javascript" src="{{MEDIA_URL}}js/jquery.js"></script>
+{% endblock %}
+
+{% block breadcrumbs %}{% if not is_popup %}
+<div class="breadcrumbs">
+     <a href="../../../">{% trans "Home" %}</a> &rsaquo;
+     <a href="../../">Invoice</a> &rsaquo;
+     <a href="../">Invoice</a> &rsaquo;
+     Betaling
+</div>
+{% endif %}{% endblock %}
+
+{% block content_title %}<h1>Registrer betaling</h1>{% endblock %}
+
+{% block content %}
+
+<p>Skriv et betalings ID nummer i formatet 111.222.333 det modtagne beløb i kroner. Betalingen vil herefter blive registeret og en e-mail herom vil blive sendt til betaleren.</p>
+
+<p><i>Formatet består af invoice ID. invoice revision ID . user ID</i></p>
+
+<form method="POST" action="">
+
+{% if form.errors %}
+<p class="errornote">
+{% blocktrans count form.errors|length as counter %}Please correct the error below.{% plural %}Please correct the errors below.{% endblocktrans %}
+</p>
+<ul class="errorlist">{% for error in form.non_field_errors %}<li>{{ error }}</li>{% endfor %}</ul>
+{% endif %}
+
+{% for fieldset in adminform %}
+      {% include "admin/includes/fieldset.html" %}
+{% endfor %}
+
+    <div class="submit-row" >
+    <input type="submit" value="Registrer betaling" class="default" name="pay" />
+    </div>
+</form>
+
+{% if changed_attendee %}
+<div style="border-style: solid; border-color: #000000; border-width: 1px; padding: 1em;">
+<h3>Betaling gennemført for {{changed_attendee.user.get_full_name}}, en e-mail er blevet sendt og en betaling på {{changed_payment.amount}},- er blevet registreret.</h3>
+</div>
+
+{% if not changed_attendee.invoice.in_balance %}
+<br/><br/>
+<div style="background-color: #fce94f; border-style: solid; border-color: #000000; border-width: 1px; padding: 1em;">
+<h3>Denne person har enten ikke betalt det fulde beløb eller har betalt for meget. Gennemgå venligst <a href="{% url admin:events_attend_billing changed_attendee.pk %}">denne persons kvittering</a> og <a href="mailto:{{changed_attendee.user.email}}">kontakt personen</a>.</h3>
+</div>
+{% endif %}
+{% endif %}
+
+{% endblock %}
