@@ -9,6 +9,7 @@
  * Added outgoing mail query in order to better support mass e-mails.
  * Added dynamic menu to the admin in order to generate the menu based on installed functionality
  * Added statistics for user age and join date.
+ * Added basic workflow concept to payment registration. Initially with e-mail notification on registration.
 
 2.2.0
  * Added pyton library to sso api.
